kubernetes/apps/default/openspeedtest/app/referencegrant.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: ReferenceGrant
metadata:
  name: allow-openspeedtest-to-http-interceptor
  namespace: keda
spec:
  from:
    - group: gateway.networking.k8s.io
      kind: HTTPRoute
      namespace: default
  to:
    - group: ""
      kind: Service
      name: keda-add-ons-http-interceptor-proxy
