kubernetes/apps/default/openspeedtest/app/httproute.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: openspeedtest
  namespace: default
  annotations:
    gethomepage.dev/enabled: "true"
    gethomepage.dev/name: OpenSpeedTest
    gethomepage.dev/group: Monitoring
    gethomepage.dev/icon: openspeedtest.png
spec:
  parentRefs:
    - name: internal
      namespace: networking
      sectionName: https
  hostnames:
    - "openspeedtest.${SECRET_DOMAIN}"
  rules:
    - backendRefs:
        - name: keda-add-ons-http-interceptor-proxy
          namespace: keda
          port: 8080
